app-infra/istio.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: shared-gateway
  namespace: micro-calculations
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "micro-calculations.local"
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: example-c-external
  namespace: micro-calculations
spec:
  hosts:
    - "micro-calculations.local"
  gateways:
    - shared-gateway
  http:
    - route:
        - destination:
            host: example-c-service
            port:
              number: 80
